@@ -44,11 +44,49 @@ class Logger
     formatter.datetime_format if formatter.respond_to?(:datetime_format)
   end
   
-  alias :old_formatter :formatter
+  alias :old_formatter :formatter if method_defined?(:formatter)
   # Get the current formatter. The default formatter is a SimpleFormatter which only
   # displays the log message
   def formatter
     @formatter ||= SimpleFormatter.new
+  end
+
+  unless const_defined? :Formatter
+    class Formatter
+      Format = "%s, [%s#%d] %5s -- %s: %s\n"
+
+      attr_accessor :datetime_format
+
+      def initialize
+        @datetime_format = nil
+      end
+
+      def call(severity, time, progname, msg)
+        Format % [severity[0..0], format_datetime(time), $$, severity, progname,
+        msg2str(msg)]
+      end
+
+      private
+        def format_datetime(time)
+          if @datetime_format.nil?
+            time.strftime("%Y-%m-%dT%H:%M:%S.") << "%06d " % time.usec
+          else
+            time.strftime(@datetime_format)
+          end
+        end
+
+        def msg2str(msg)
+          case msg
+          when ::String
+            msg
+          when ::Exception
+            "#{ msg.message } (#{ msg.class })\n" <<
+            (msg.backtrace || []).join("\n")
+          else
+            msg.inspect
+          end
+        end
+    end
   end
   
   # Simple formatter which only displays the message.
@@ -74,5 +112,14 @@ class Logger
       def format_message(severity, timestamp, msg, progname)
         formatter.call(severity, timestamp, progname, msg)
       end
+      
+      attr_writer :formatter
+      public :formatter=
+
+      alias old_format_datetime format_datetime
+      def format_datetime(datetime) datetime end
+
+      alias old_msg2str msg2str
+      def msg2str(msg) msg end
     end
 end
