@@ -1,5 +1,7 @@
 *SVN*
 
+* Backport clean_logger changes to support ruby 1.8.2 [mislav]
+
 * Added proper handling of arrays #8537 [hasmanyjosh]
 
   Before:
